--- a/AggieRoutes/static/css/index.css
+++ b/AggieRoutes/static/css/index.css
@@ -25,13 +25,13 @@ html {
 }
 
 #map {
-    top: 4em;
-    height: 93vh;
-    width: 80%;
+    /* top: 4em; */
+    height: 100vh;
+    width: 75%;
     float: right;
 }
 
-#banner-wrapper{
+/* #banner-wrapper{
     background-color: #500000;
     border-bottom: solid 1px rgba(160, 160, 160, 0.3);
     height: 4em;
@@ -48,14 +48,20 @@ html {
         font-size: 3em;
         text-align: center;
         font-family: Georgia;
-    }
+    } */
 
 #sidebar{
-    background-color: #aaaaaa;
+    background-color:  #500000;
     height: 100vh;
-    width: 20%;
+    width: 25%;
     float: left;
 }
+    #heading{
+        font-size: 30pt;
+        font-style:italic;
+        font-weight:bold;
+        color: #FFFFFF;
+    }
     
     #pac-input {
         width: 90%
@@ -65,14 +71,14 @@ html {
 
     #input {
         padding-top: 5em;
-        color: #000000;
+        color: #FFFFFF;
         overflow: hidden;
         font-size: 14pt; 
     }
 
     #msg {
         padding-top: 5em;
-        color: #000000;
+        color: #FFFFFF;
         overflow: hidden;
         font-size: 14pt; 
     }
