Full path route.js

--- a/AggieRoutes/templates/index.html
+++ b/AggieRoutes/templates/index.html
@@ -50,7 +50,8 @@
       orig_lng = {{orig_lng}};
       dest_lat = {{ dest_lat }};
       dest_lng = {{ dest_lng }};
-      console.log(dest_lat);
+      start_loc = {{ start_loc }};
+      stop_loc = {{ stop_loc }};
     </script>
     <script src="{% static '/js/route.js' %}"></script>
     <script async defer
