--- a/AggieRoutes/static/css/index.css
+++ b/AggieRoutes/static/css/index.css
@@ -24,10 +24,11 @@ html {
     font-family: "Oxygen";
 }
 
+
 #map {
     /* top: 4em; */
     height: 100vh;
-    width: 75%;
+    width: 70%;
     float: right;
 }
 
@@ -53,7 +54,7 @@ html {
 #sidebar{
     background-color:  #500000;
     height: 100vh;
-    width: 25%;
+    width: 30%;
     float: left;
 }
     #heading{
@@ -61,6 +62,11 @@ html {
         font-style:italic;
         font-weight:bold;
         color: #FFFFFF;
+    }
+
+    #spirit-bus{
+        height:8vh;
+        width:8vh;
     }
     
     #pac-input {
