--- a/AggieRoutes/templates/index.html
+++ b/AggieRoutes/templates/index.html
@@ -6,7 +6,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet" type="text/css">
-    
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css"/>
   </head>
   <body>
@@ -19,19 +23,29 @@
 
     <!-- Sidebar -->
     <div id="sidebar">
-      <h1 id=heading>AggieRoutes</h1>
+      <div class="media">
+        <div class=media-body>
+          <h1 class="media-heading" id=heading>AggieRoutes</h1>
+        </div>
+        <span class="media-right">
+            <img id=spirit-bus src="{%static '/images/white_spirit_bus.png'%}" alt="" >
+          </span>
+      </div>
       <ul>
         <li id="input">
+          {% load crispy_forms_tags %}
           <form action="" method="POST">
             {% csrf_token %}  
-            {{ form }}
-            <input type="submit" value="ok">
+            {{ form|crispy }}
+            <input class="btn btn-success" type="submit" value="Gig 'em!">
+
           <!-- <li id="input">
             Enter Origin: 
             <input id="pac-input" type="text">
             <input type="submit" text="submit">
           -->
-        </form>
+          </form>
+ 
         </li>
       </ul>
 
